--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,10 @@ hr {
     opacity: 20%;
 }
 
+.info {
+    margin-bottom: -0.5rem;
+}
+
 /* Styles for Containers and Card */
 .page-container {
     height: 100vh;
